# react-from-scratch

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  react_output_20241008_202228.txt  react_output_20241008_202935.txt  react_output_20241008_203030.txt  react_output_20241008_203321.txt  react_output_20241008_203336.txt  react_output_20241008_203435.txt
config/: config.yml
data/input/: react.txt  react_template.txt
data/output/: trace.txt  trace_1.txt  trace_2.txt  trace_3.txt
img/: think_act_observe_loop.mmd
src/config/: logging.py  setup.py
src/llm/: gemini.py
src/react/: agent.py  final_agent.py  new_agent.py  tools.py
src/tools/: manager.py  serp.py  wiki.py
src/utils/: io.py
